[package]
name = "ovenauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
rust-argon2 = "1.0.0"
anyhow = "1.0.51"
actix-identity = "0.4.0"
actix-cors = "0.6.1"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.2"
env_logger = "0.9.0"
log = "0.4.14"
uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }

[dependencies.sqlx]
version = "0.5.9"
features = ["runtime-actix-rustls", "offline", "json", "postgres" ]
