[package]
name = "ovenauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rust-argon2 = "1.0.0"
anyhow = "1.0.71"
actix-identity = "0.5.2"
actix-cors = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
dotenvy = "0.15.7"
chrono = { version = "0.4.26", features = ["serde"] }
url = "2.4.0"
env_logger = "0.10.0"
log = "0.4.19"

[dependencies.actix-session]
version = "0.7.2"
features = ["cookie-session"]

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-actix-rustls", "offline", "json", "postgres" ]
