[package]
name = "ovenauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0.0"
anyhow = "1.0.71"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
dotenvy = "0.15.7"
chrono = { version = "0.4.26", features = ["serde"] }
url = "2.4.0"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
axum = { version = "0.6.20", features = ["ws", "tracing"] }
axum-login = { git = "https://github.com/maxcountryman/axum-login", rev = "bb7e5d32100bb6846412cee1f26851cc47397991", features = ["sqlx", "postgres"] }
thiserror = "1.0.49"
ulid = { version = "1.1.0", features = ["serde"] }
futures-util = "0.3.28"

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "json", "postgres" ]

